# platform.upstream.xinit

./: .cvsignore  .gitignore  ChangeLog  Makefile.am  configure.ac  cpprules.in  org.x.X11.plist.cpp  org.x.startx.plist.cpp  project.config  startx.cmd  startx.cpp  startx.man  xinit-1.3.2.tar.bz2.delta  xinit-1.3.2.tar.bz2.id  xinit.c  xinit.def  xinit.man  xinitrc.cmd  xinitrc.cpp
launchd/: Makefile.am  console_redirect.c  org.x.X11.plist.cpp  x11-exec.c
launchd/privileged_startx/: .gitignore  10-tmpdirs.cpp  Makefile.am  server.c
launchd/user_startx/: .gitignore  Makefile.am  launchd_startx.c  startx.plist.cpp
packaging/: xinit-client-session.patch  xinit-suse.diff  xinit-tolerant-hostname-changes.diff  xinit.changes  xinit.spec  xinit.tar.bz2
privileged_startx/: .gitignore  10-tmpdirs.cpp  Makefile.am  org.x.privileged_startx.plist.cpp  server.c
